--- a/css/_state.scss
+++ b/css/_state.scss
@@ -1,5 +1,5 @@
 // Styling for menu for smaller screens.
-.stad-menu-offsmall {
+.event-menu-offsmall {
   @media screen and (max-width: 549px) {
     display: none;
   }
