--- a/css/style.css
+++ b/css/style.css
@@ -8,29 +8,30 @@
 
       .test-list-control{
         background: red;
-        max-width: 240px;
-        margin: 30px;
+        max-width: 180px;
+        margin: 10px;
         border-radius: 10px;
       }
-
+      
+      @media screen and (max-width: 479px){#panel-list-control{display:none;}}
+      
       .icons{
         text-transform: uppercase;
         text-align: center;
         color: white;
-        font-size: 1.2em;
+        font-size: .85em;
         text-shadow: 0 0 10px red;
       }
 
       .icon-titles{
         text-align: center;
-        font-size: 1.5em;
+        font-size: 1.3em;
         color: white;
         text-shadow: 0 0 10px black;
         padding-top:20px;
       }
 
       #title-bar{
-        margin-top: 10px;
         min-height: 60px;
         line-height: 220%;
         text-align: center;
@@ -62,7 +63,10 @@
       .event-list-menu{width:100%;margin-bottom:4px}
       .event-list{margin:4px 0 0 0;padding:4px 8px;background-color:rgba(255,255,255,0.7);border:1px solid #cecece}
       .event-list-ul{margin:0;padding:0;overflow-y:scroll}
-      .event-list-ul p{font-size:14px;line-height:14px;margin:4px 0px}.event-list-ul li{padding:2px;list-style:none;border-bottom:1px dotted #cecece;-webkit-transition:background-color 0.5s ease;-moz-transition:background-color 0.5s ease;-o-transition:background-color 0.5s ease;transition:background-color 0.5s ease}.event-list-ul li:hover{cursor:pointer;background-color:rgba(11,104,254,0.2)}.event-list-ul li:last-child,.event-list-ul .event-list-last{border-bottom:none}
+      .event-list-ul p{font-size:14px;line-height:14px;margin:4px 0px}
+
+      .event-list-ul li:hover{cursor:pointer;background-color:rgba(11,104,254,0.2)}
+      .event-list-ul li:last-child,.event-list-ul .event-list-last{border-bottom:none}
 
       @media screen and (max-height: 399px){.event-list-ul{max-height:150px;}}
 
@@ -70,6 +74,14 @@
       @media screen and (min-height: 550px){.event-list-ul{max-height:380px;}}
       @media screen and (min-height: 675px){.event-list-ul{max-height:500px;}}
 
-      .event-list-name{font-weight:bold}.event-list-data{color:#8e8e8e}.search-box{margin:0;padding:0;height:36px;background:white;border:2px solid #cecece}.search-box input{display:inline-block;margin:0;outline:0;width:190px;line-height:20px;border:none}.search-box-clear{display:inline-block;margin:0;outline:0;width:40px;padding:6px;font-size:18px;line-height:20px;min-width:40px;min-height:34px;background-color:white;border:none}.event-list-filters{margin:4px 0 0 0;padding:0}.event-list-filters li{padding:10px;margin:11px;display:inline-block;list-style:none;max-width:75px;;border:1px dotted #cecece;background-color:black;border-radius:10px}.event-list-filters li:hover{cursor:pointer}.event-list-filters li:last-child{margin-right:10px}.event-list-filters img{max-width:100%}.info-teams{color:#8e8e8e;margin:4px 0}.info-address{margin:8px 0}.info-address p{margin:4px 0}.info-photos img{max-width:100%}.info-censusData ul{padding:0}.info-censusData ul li{margin:4px 0px;list-style:none}.info-messages{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;border:1px solid #8e8e8e;background-color:#eaeaea;padding:4px 8px}.info-messages p{color:#8e8e8e;margin:4px 0;padding:0}.info-errors{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;border:1px solid #c32e2e;background-color:#ffacac;padding:4px 8px}.info-errors ul{padding:0;margin:0}.info-errors ul li{color:#c32e2e;list-style:none;margin:4px 0}.error-dialog{margin:100px auto;padding:24px;border:1px solid #c32e2e;background-color:#ffacac;width:400px;max-width:80%;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px}.error-message{margin:0;padding:0;font-size:16px;color:#c32e2e}
+      .event-list-name{font-weight:bold}
+      .event-list-data{color:#8e8e8e}
+      .search-box{margin:0;padding:0;height:36px;background:white;border:2px solid #cecece}.search-box input{display:inline-block;margin:0;outline:0;width:190px;line-height:20px;border:none}.search-box-clear{display:inline-block;margin:0;outline:0;width:40px;padding:6px;font-size:18px;line-height:20px;min-width:40px;min-height:34px;background-color:white;border:none}
+      .event-list-filters{margin:4px 0 0 0;padding:0}
+      .event-list-filters li{padding:10px;margin:10px;display:inline-block;list-style:none;max-width:25%;;border:1px dotted #cecece;background-color:black;border-radius:10px}
+      .event-list-filters li:hover{cursor:pointer}
+      .event-list-filters li:last-child{margin-right:10px}
+      .event-list-filters img{max-width:100%}
+      .info-teams{color:#8e8e8e;margin:4px 0}.info-address{margin:8px 0}.info-address p{margin:4px 0}.info-photos img{max-width:100%}.info-censusData ul{padding:0}.info-censusData ul li{margin:4px 0px;list-style:none}.info-messages{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;border:1px solid #8e8e8e;background-color:#eaeaea;padding:4px 8px}.info-messages p{color:#8e8e8e;margin:4px 0;padding:0}.info-errors{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;border:1px solid #c32e2e;background-color:#ffacac;padding:4px 8px}.info-errors ul{padding:0;margin:0}.info-errors ul li{color:#c32e2e;list-style:none;margin:4px 0}.error-dialog{margin:100px auto;padding:24px;border:1px solid #c32e2e;background-color:#ffacac;width:400px;max-width:80%;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px}.error-message{margin:0;padding:0;font-size:16px;color:#c32e2e}
 
       @media screen and (max-width: 549px){.event-menu-offsmall{display:none;}}
