--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@
       .event-list{margin:4px 0 0 0;padding:4px 8px;background-color:rgba(255,255,255,0.7);border:1px solid #cecece}
       .event-list-ul{margin:0;padding:0;overflow-y:scroll}
       .event-list-ul p{font-size:14px;line-height:14px;margin:4px 0px}
-
+      .event-list-ul li{border: 1px solid #ef7070;padding:2px;}
       .event-list-ul li:hover{cursor:pointer;background-color:rgba(11,104,254,0.2)}
       .event-list-ul li:last-child,.event-list-ul .event-list-last{border-bottom:none}
 
